--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,16 @@ layout: compress
               {{ content }}
             {% endif %}
           </main>
+<!-- panel -->
+          <aside aria-label="Panel" id="panel-wrapper" class="col-xl-3 ps-2 mb-5 text-muted">
+            <div class="access">
+            </div>
 
+            {% for _include in layout.panel_includes %}
+              {% assign _include_path = _include | append: '.html' %}
+              {% include {{ _include_path }} lang=lang %}
+            {% endfor %}
+          </aside>
         </div>
 
         <div class="row">
